# File_Sorter

./: CMakeLists.txt  README.md  fileSorter.cpp
include/: DirectoryManager.hpp  File.hpp  FileSorter.hpp  FileTypeClassifier.hpp  FileWatcher.hpp  utils.hpp
src/: DirectoryManager.cpp  File.cpp  fileSorter  fileSorter.cpp  main.cpp
